                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 11-03-2005 fixed: dialogs sometimes didn't popup via ActivateWindow() in <execute> tags.
  - 11-03-2005 fixed: ButtonMenu wasn't rendered if no label control was present.
  - 11-03-2005 fixed: mplayer wasn't freed after a playlist had ended.
  - 11-03-2005 added: [ 1160414 ] Added new methods to xbmc.Player python class. onPlayBackStopped() (user stop), getTotalTime() (duration of current media), getTime() (position of current media), seekTime( double pos ) (seek to specified position) - thanks to gimblefoot
  - 11-03-2005 added: [ 1160400 ] Added ControlCheckMark in Python - thanks to gimblefoot
  - 10-03-2005 added: My Music label format now accepts %F for filename
  - 10-03-2005 changed: My Music Nav window now uses a virtual path for better "back" handling (thanks to Elupus for the idea)
  - 10-03-2005 added: Initial support for VideoPlayer.Title for infolabels/infofadelabels.
  - 10-03-2005 added: Option to only remember selected item when traversing up the folder structure(parent folder), not down.
  - 10-03-2005 changed: Unified the way xbmc remember what item was selected in a folder.
  - 10-03-2005 added: Direct url support for built-in command XBMC.PlayMedia(url)
  - 10-03-2005 fixed: Selecting VIDEO_TS.IFO on a dvd would not initiate playback properly.
  - 10-03-2005 fixed: Any dll's atempting to use stat on a dvd would always return success with invalid properties set
  - 10-03-2005 added: Dynamic Range compensation for AC3 if no AC3/DTS receiver is available.
  - 09-03-2005 changed: music files, duration of files without tags is shown when tag reading is enabled