@@ -23,7 +23,6 @@ public:
 	virtual bool		HasAudio();
 	virtual void		ToggleOSD();
 	virtual void		SwitchToNextLanguage();
-	virtual __int64	GetPTS();
 	virtual void		ToggleSubtitles();
 	virtual void		ToggleFrameDrop();
 	virtual void		SubtitleOffset(bool bPlus=true);	
@@ -39,6 +38,7 @@ public:
 	virtual void    Update(bool bPauseDrawing=false);
 	virtual void		GetVideoRect(RECT& SrcRect, RECT& DestRect){};
 	virtual void		GetVideoAspectRatio(float& fAR) {};
+	virtual __int64 GetTime();
 
 	static bool     IsSupportedFormat(const CStdString& strFmt);
 
